force-app/main/default/objects/vlocity_ins__FormularyTier__c/fields/vlocity_ins__CoPayAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CoPayAmount__c</fullName>
    <description>The standard copay amount applied for all drugs in this tier.</description>
    <inlineHelpText>The standard copay amount applied for all drugs in this tier.</inlineHelpText>
    <label>CoPay Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>