force-app/main/default/objects/vlocity_ins__FormularyTier__c/fields/vlocity_ins__CoPayPercent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CoPayPercent__c</fullName>
    <description>The standard copay percentage applied for all drugs in this tier.</description>
    <inlineHelpText>The standard copay percentage applied for all drugs in this tier.</inlineHelpText>
    <label>CoPay %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>